[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/sprite_frames/Player.tres" type="SpriteFrames" id=1]
[ext_resource path="res://src/scripts/game_scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/sfx/player/walking/walking.wav" type="AudioStream" id=3]
[ext_resource path="res://src/dynamic_fonts/Pixellari_17.tres" type="DynamicFont" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 27.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 29 )

[sub_resource type="CircleShape2D" id=3]
radius = 64.1785

[node name="Player" type="KinematicBody2D"]
light_mask = 0
z_index = 1
collision_mask = 4
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
rotation = 1.5708
frames = ExtResource( 1 )
animation = "idle"

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -60.0
margin_top = -52.0
margin_right = 60.0
margin_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 120, 20 )
rect_pivot_offset = Vector2( 60, 20 )
custom_fonts/font = ExtResource( 4 )
text = "Player Name"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -6, 0 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
smoothing_enabled = true

[node name="AttackArea" type="Area2D" parent="."]
visible = false
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( 29, -1 )
shape = SubResource( 2 )

[node name="PickUpArea" type="Area2D" parent="."]
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickUpArea"]
shape = SubResource( 3 )

[node name="AttackTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.3

[node name="WalkingSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -8.0
max_distance = 1000.0
attenuation = 2.0
bus = "SFX"
area_mask = 0

[connection signal="body_entered" from="AttackArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_AttackArea_body_exited"]
[connection signal="body_entered" from="PickUpArea" to="." method="_on_PickUpArea_body_entered"]
[connection signal="body_exited" from="PickUpArea" to="." method="_on_PickUpArea_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
